# CUDA_Freshman

./: .gitignore  CMakeLists.txt  README.md
0_hello_world/: hello_world.cu
10_reduceInteger/: CMakeLists.txt  reduceInteger.cu
11_simple_sum_matrix2D/: CMakeLists.txt  simple_sum_matrix.cu
12_reduce_unrolling/: CMakeLists.txt  reduceUnrolling.cu
13_nested_hello_world/: Makefile  nested_Hello_World.cu
14_global_variable/: CMakeLists.txt  global_variable.cu
15_pine_memory/: CMakeLists.txt  pine_memory.cu
16_zero_copy_memory/: CMakeLists.txt  zero_copy_memory.cu
17_UVA/: CMakeLists.txt  UVA.cu
18_sum_array_offset/: CMakeLists.txt  sum_array_offset.cu
19_AoS/: AoS.cu  CMakeLists.txt
1_0_hello_world/: CMakeLists.txt  hello_world.cu
1_check_dimension/: CMakeLists.txt  check_dimension.cu
20_SoA/: CMakeLists.txt  SoA.cu
21_sum_array_offset_unrolling/: CMakeLists.txt  sum_array_offset_unrolling.cu
22_transform_matrix2D/: CMakeLists.txt  transform_matrix2D.cu
23_sum_array_uniform_memory/: CMakeLists.txt  sum_arrays_uniform_memory.cu
24_shared_memory_read_data/: CMakeLists.txt  shared_memory_read_data.cu
25_reduce_integer_shared_memory/: CMakeLists.txt  reduce_integer_shared_memory.cu
26_transform_shared_memory/: CMakeLists.txt  transform_shared_memory.cu
27_stencil_1d_constant_read_only/: CMakeLists.txt  stencil_1d_constant_read_only.cu
28_shfl_test/: CMakeLists.txt  shfl_test.cu
29_reduce_shfl/: CMakeLists.txt  reduce_shfl.cu
2_grid_block/: CMakeLists.txt  grid_block.cu
30_stream/: CMakeLists.txt  stream.cu
31_stream_omp/: stream_omp.cu
32_stream_resource/: CMakeLists.txt  stream_resource.cu
33_stream_block/: CMakeLists.txt  stream_block.cu
34_stream_dependence/: CMakeLists.txt  stream_dependence.cu
35_multi_add_depth/: CMakeLists.txt  multi_add_depth.cu
36_multi_add_breadth/: CMakeLists.txt  multi_add_breadth.cu
37_asyncAPI/: CMakeLists.txt  asyncAPI.cu
38_stream_call_back/: CMakeLists.txt  stream_call_back.cu
3_sum_arrays/: CMakeLists.txt  sum_arrays.cu
4_sum_arrays_timer/: CMakeLists.txt  sum_arrays_timer.cu
5_thread_index/: CMakeLists.txt  thread_index.cu
6_sum_matrix/: CMakeLists.txt  sum_matrix.cu
7_device_information/: CMakeLists.txt  device_information.cu  evice_information.cu
8_divergence/: CMakeLists.txt  divergence.cu
9_sum_matrix2D/: CMakeLists.txt  sum_matrix2D.cu
include/: freshman.h
tony@192.168.3.19/: Makefile  nested_Hello_World.cu
