cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
Project(CUDA_Freshman CXX C CUDA)
set(CUDA_NVCC_FLAGS_DEBUG "-g -G")
include_directories(./include)
add_subdirectory(0_hello_world)
add_subdirectory(1_check_dimension)
add_subdirectory(2_grid_block)
add_subdirectory(3_sum_arrays)
add_subdirectory(4_sum_arrays_timer)
add_subdirectory(5_thread_index)
add_subdirectory(6_sum_matrix)
add_subdirectory(7_device_information)
add_subdirectory(8_divergence)
add_subdirectory(9_sum_matrix2D)
add_subdirectory(10_reduceInteger)
add_subdirectory(11_simple_sum_matrix2D)
add_subdirectory(12_reduce_unrolling)
add_subdirectory(14_global_variable)
add_subdirectory(15_pine_memory)
add_subdirectory(16_zero_copy_memory)
add_subdirectory(17_UVA)