cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
Project(CUDA_Freshman CXX C CUDA)
set(CMAKE_CUDA_FLAGS "-arch=compute_35 -g -G -O3")
include_directories(./include)
add_subdirectory(0_hello_world)
add_subdirectory(1_check_dimension)
add_subdirectory(2_grid_block)
add_subdirectory(3_sum_arrays)
add_subdirectory(4_sum_arrays_timer)
add_subdirectory(5_thread_index)
add_subdirectory(6_sum_matrix)
add_subdirectory(7_device_information)
add_subdirectory(8_divergence)
add_subdirectory(9_sum_matrix2D)
add_subdirectory(10_reduceInteger)
add_subdirectory(11_simple_sum_matrix2D)
add_subdirectory(12_reduce_unrolling)
add_subdirectory(14_global_variable)
add_subdirectory(15_pine_memory)
add_subdirectory(16_zero_copy_memory)
add_subdirectory(17_UVA)
add_subdirectory(18_sum_array_offset)
add_subdirectory(19_AoS)
add_subdirectory(20_SoA)
add_subdirectory(21_sum_array_offset_unrolling)
add_subdirectory(22_transform_matrix2D)
add_subdirectory(23_sum_array_uniform_memory)
add_subdirectory(24_shared_memory_read_data)
add_subdirectory(25_reduce_integer_shared_memory)
add_subdirectory(26_transform_shared_memory)
add_subdirectory(27_stencil_1d_constant_read_only)
add_subdirectory(28_shfl_test)
add_subdirectory(29_reduce_shfl)
add_subdirectory(30_stream)
add_subdirectory(32_stream_resource)
add_subdirectory(33_stream_block)
add_subdirectory(34_stream_dependence)
add_subdirectory(35_multi_add_depth)
add_subdirectory(36_multi_add_breadth)
add_subdirectory(37_asyncAPI)
add_subdirectory(38_stream_call_back)
